[gd_scene load_steps=4 format=3 uid="uid://bp847kvytvbu6"]

[ext_resource type="Script" uid="uid://82u386todsni" path="res://Scripts/Battle_Sim/battle_rewards.gd" id="1_klkux"]
[ext_resource type="Texture2D" uid="uid://dwgrgwtu3550k" path="res://Resources/TestArt/Test.png" id="2_peuei"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3bds6"]
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0, 0, 0, 1)

[node name="BattleRewards" type="Node2D"]
script = ExtResource("1_klkux")

[node name="RewardBGRect" type="TextureRect" parent="."]
visible = false
offset_right = 128.0
offset_bottom = 128.0
scale = Vector2(0.370283, 0.557489)
texture = ExtResource("2_peuei")

[node name="Button" type="Button" parent="."]
offset_left = 1783.0
offset_top = 617.0
offset_right = 1862.0
offset_bottom = 648.0
text = "Continue
"

[node name="BGForRewardBox" type="Panel" parent="."]
offset_left = 681.0
offset_top = 35.0
offset_right = 1237.0
offset_bottom = 489.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3bds6")

[node name="Label" type="Label" parent="BGForRewardBox"]
layout_mode = 0
offset_left = 27.0
offset_top = 17.0
offset_right = 155.0
offset_bottom = 56.0
scale = Vector2(4.06145, 2.42899)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "VICTORY!"

[node name="HBoxContainer" type="HBoxContainer" parent="BGForRewardBox"]
layout_mode = 0
offset_left = 39.0
offset_top = 72.0
offset_right = 167.0
offset_bottom = 122.0
scale = Vector2(3.73457, 3.03496)

[node name="VBoxContainer" type="VBoxContainer" parent="BGForRewardBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.35

[node name="GoldRewardLabel" type="Label" parent="BGForRewardBox/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
text = "Gold Reward
"

[node name="XpRewardLabel" type="Label" parent="BGForRewardBox/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
text = "XP Reward"

[node name="GoldLabel" type="Label" parent="BGForRewardBox/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 8
text = "Gold
"

[node name="XpLabel" type="Label" parent="BGForRewardBox/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 8
text = "XP"

[node name="VariableContainer" type="VBoxContainer" parent="BGForRewardBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.45

[node name="GoldRewardUnit" type="Label" parent="BGForRewardBox/HBoxContainer/VariableContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
text = "0
"
horizontal_alignment = 2

[node name="XpRewardUnit" type="Label" parent="BGForRewardBox/HBoxContainer/VariableContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
text = "0
"
horizontal_alignment = 2

[node name="GoldUnit" type="Label" parent="BGForRewardBox/HBoxContainer/VariableContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 8
text = "0
"
horizontal_alignment = 2

[node name="XpUnit" type="Label" parent="BGForRewardBox/HBoxContainer/VariableContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 8
text = "0"
horizontal_alignment = 2

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
